# rust-ipfs-verifier

./: .gitmodules  Cargo.toml  README.md
sgx/: Makefile  README.md
sgx/app/: Cargo.toml
sgx/app/src/: main.rs
sgx/common/: README.md
sgx/compiler-rt/: README.md
sgx/edl/: README.md
sgx/enclave/: Cargo.toml  Enclave.edl  Makefile
sgx/enclave/src/: lib.rs
src/: main.rs
