[package]
name = "ipfs-verifier"
version = "0.1.0"
authors = ["Alain Brenzikofer <news@brenzi.ch>"]
edition = "2018"

[dependencies]
multihash = { git = "https://github.com/multiformats/rust-multihash.git"}
ipfs-api = "0.5.0-alpha2"
futures = "0.1"
hyper = "0.12"
rust-base58 = "0.0.4"
sha2 = { version = "0.7", default-features = false }
cid = { git ="https://github.com/multiformats/rust-cid.git"}