[package]
name = "IpfsVerifierEnclave"
version = "1.0.0"
authors = ["Alain Brenzikofer"]

[lib]
name = "IpfsVerifierEnclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = "1.0.5"
sgx_tstd = "1.0.5"
sgx_tcrypto = "1.0.5"
rust-base58 = { path =  "../../../rust-base58" }     