[package]
name = "IpfsVerifierEnclave"
version = "1.0.0"
authors = ["Alain Brenzikofer"]

[lib]
name = "IpfsVerifierEnclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path =  "../../../rust-sgx-sdk/sgx_types" }
sgx_tstd = { path =  "../../../rust-sgx-sdk/sgx_tstd" }
sgx_tcrypto = { path =  "../../../rust-sgx-sdk/sgx_tcrypto" }
rust-base58 = { path =  "../../../rust-sgx-sdk/third_party/rust-base58" }     